git commit -m "[dev] add fonts, variables”

--- a/dev/scss/partials/_variables.scss
+++ b/dev/scss/partials/_variables.scss
@@ -1,12 +1,20 @@
 // --------------------------------------------------
 // colours
 
-$yellow:                   #e1dd66;
-//$color-grey:                    #ccc;
-//$color-white:                   #fff;
-//
-//// links
-//
-//$link-color:                    $color-black;
-//$link-hover-color:              lighten($link-color, 5);
-//$link-active-color:             lighten($link-color, 10);
+$gray-background:           #e5e5e5;
+$white:                     #fff;
+$primary:                   #17696a;
+$success:                   #03cea4;
+$danger:                    #ff4242;
+$warning:                   #f89828;
+$info:                      #5a87fc;
+
+//Color gray
+$gray-900:                  #1e212c;
+$gray-800:                  #424551;
+$gray-700:                  #787a80;
+$gray-600:                  #9a9ca5;
+$gray-500:                  #b3b7bc;
+$gray-400:                  #d7dadd;
+$gray-300:                  #e5e8ed;
+$gray-200:                  #f4f5f6;
