--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,32 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Ubuntu:wght@700&display=swap");
+html {
+  height: 100%;
+}
+
+body {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  min-height: 100%;
+  font-family: "Lato", sans-serif;
+}
+
+.header__heading {
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  letter-spacing: 0.02em;
+  color: #1e212c;
+  text-transform: uppercase;
+}
+@media screen and (min-width: 990px) {
+  .header__heading {
+    font-size: 30px;
+  }
+}
+
+.title--primary {
+  font-family: "Lato", sans-serif;
+}
+
 .announcement-bar__message {
-  color: #e1dd66;
+  color: #17696a;
 }
