--- a/dev/scss/partials/_base.scss
+++ b/dev/scss/partials/_base.scss
@@ -1,10 +1,29 @@
-//html {
-//  height: 100%;
-//}
-//
-//body {
-//  -moz-osx-font-smoothing: grayscale;
-//  -webkit-font-smoothing: antialiased;
-//  min-height: 100%;
-//  background-color: #008000;
-//}
+// Global Start
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Ubuntu:wght@700&display=swap');
+
+html {
+  height: 100%;
+}
+
+body {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  min-height: 100%;
+  font-family: 'Lato', sans-serif;
+}
+
+.header__heading {
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+  letter-spacing: .02em;
+  color: $gray-900;
+  text-transform: uppercase;
+
+  @media screen and (min-width: 990px) {
+    font-size: 30px;
+  }
+}
+
+.title--primary  {
+  font-family: 'Lato', sans-serif;
+}
