--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -316,6 +316,23 @@
         </ul>
       </nav>
     {%- endif -%}
+        <div class="site-header-account-links">
+          <a href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}" class="menu-drawer__account link focus-inset h5">
+            {% render 'icon-account' %}
+            {%- liquid
+              if customer
+                echo 'customer.account_fallback' | t
+              else
+                echo 'customer.log_in' | t
+              endif
+            -%}
+          </a>
+          <span class="account-button-separator">/</span>
+          <a href="{{ routes.account_register_url }}">
+            {{ 'customer.login_page.register' | t }}
+          </a>
+        </div>
+
       </div>
     </div>
 
