--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -19,8 +19,12 @@
     .site-header-main-wrapper {
       align-items: center;
       display: grid;
-      grid-template-areas: 'left-icon navigation icons';
-      grid-template-columns: 1fr 3fr 1fr;
+      grid-template-areas: 'left-icon navigation language icons';
+      grid-template-columns: 1fr 3fr 1fr 1fr;
+    }
+
+    .mt-language-menu {
+      grid-area: language;
     }
 
     .header__inline-menu {
