--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -1,7 +1,6 @@
 // --- header--- //
 .header {
   display: block;
-  height:128px;
 
   .site-header-wrapper {
     background-color: $gray-800;
@@ -32,8 +31,10 @@
     }
 
     .list-menu__item {
-      color: $white;
       opacity: .6;
+      @media screen and (min-width: 990px) {
+        color: $white;
+      }
     }
 
     .site-header-account-links {
@@ -108,6 +109,7 @@
     .swym-wishlist {
       display: flex;
       align-items: center;
+      margin-left: 52px;
       text-decoration: none;
     }
 
