--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -497,6 +497,16 @@
                   {%- if link.links != blank -%}
                     <a href="{{ link.url }}">{{ link.title | escape }}<i class="fa fa-angle-down"></i></a>
                     <div class="sub-menu mega-menu mega-menu-column-4">
+                      {% assign image_block = false %}
+                      {% assign linktitle = link.title | downcase %}
+                      {% for block in section.blocks %}
+                        {%- assign val = block.settings.mega_link | downcase -%}
+                        {% if val == linktitle %}
+                          {% if block.settings.menu_enable %}
+                            {% assign image_block = true %}
+                          {% endif %}
+                        {% endif %}
+                      {% endfor %}
                       <div class="list-item">
                         <ul id="HeaderMenu-MenuList-{{ forloop.index }}" class="header__submenu list-menu list-menu--disclosure caption-large motion-reduce navmenu-submenu--desktop" role="list" tabindex="-1">
                           {%- for childlink in link.links -%}
@@ -514,8 +524,25 @@
                                 </ul>
                               </ul>
                             </li>
+
                           {%- endfor -%}
+                          <span class="image-wrapper">
+                                  <img class="site-subnav__image hide" src="{{ link.object.image | img_url: '100x100' }}" />
+                                </span>
                         </ul>
+                      </div>
+                      TEST521
+                      <div class="image-section mega-list mega-list-logo">
+                        TESTXXX
+                        {% for block in section.blocks %}
+                              <div class="img-box">
+                                <img src="{{ block.settings.image | img_url: '100x100' }}">
+                                <div class="text__section">
+                                  {% unless block.settings.title == blank %}<h3>{{ block.settings.title }}</h3>{% endunless %}
+                                  {% unless block.settings.subtitle == blank %}<p>{{ block.settings.subtitle }}</p>{% endunless %}
+                                </div>
+                              </div>
+                        {% endfor %}
                       </div>
                     </div>
                   {%- else -%}
@@ -873,6 +900,46 @@
       "unit": "px",
       "label": "t:sections.header.settings.margin_bottom.label",
       "default": 0
+    }
+  ],
+  "blocks": [
+    {
+      "type": "logo_image",
+      "name": "Mega logo",
+      "settings": [
+        {
+          "type": "checkbox",
+          "id": "menu_enable",
+          "label": "Enable this section",
+          "default": true
+        },
+        {
+          "type": "image_picker",
+          "id": "image",
+          "label": "Image"
+        },
+        {
+          "type": "text",
+          "id": "mega_link",
+          "label": "Select menu",
+          "default": "1"
+        },
+        {
+          "type": "url",
+          "id": "link",
+          "label": "Main Link"
+        },
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Title"
+        },
+        {
+          "type": "text",
+          "id": "subtitle",
+          "label": "Sub title"
+        }
+      ]
     }
   ]
 }
