--- a/assets/styles.css
+++ b/assets/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .page-width {
-  max-width: 1230px;
+  max-width: 1400px;
 }
 
 .header {
@@ -45,6 +45,10 @@ body {
   .header .site-header-main {
     min-height: 44px;
   }
+}
+.header .site-header-main .header__icon--menu {
+  position: initial;
+  color: #fff;
 }
 .header .site-header-main .site-header-main-wrapper {
   align-items: center;
@@ -94,6 +98,7 @@ body {
 .header .site-navigation-wrapper .header__icons {
   justify-self: end;
   margin-right: 100px;
+  align-items: center;
 }
 .header .site-navigation-wrapper .site-header-navigation-wrapper {
   align-content: center;
@@ -104,6 +109,10 @@ body {
 .header .site-navigation-wrapper .header__heading,
 .header .site-navigation-wrapper .header__heading-link {
   grid-area: unset;
+  align-self: center;
+}
+.header .site-navigation-wrapper .list-menu--inline {
+  align-items: center;
 }
 .header .site-navigation-wrapper .search-modal__form {
   height: 44px;
@@ -131,188 +140,217 @@ body {
   color: #1e212c;
   opacity: 0.6;
 }
-.header__menu-item {
-  font-size: 14px;
-  letter-spacing: .3px;
-  color: #282c3f;
-  border-bottom: none;
-  font-weight: 500;
-  text-transform: uppercase;
-  transition: text-decoration var(--duration-short) ease;
+.header .header__submenu {
+  background-color: #fff;
 }
-.row{
+.header .header__submenu .header__menu-item {
+  padding-left: 2.4rem;
+}
+
+.header__menu-item {
+  border-bottom: none;
+  color: #282c3f;
+  font-size: 14px;
+  text-transform: capitalize;
+  transition: -webkit-text-decoration var(--duration-short) ease;
+  transition: text-decoration var(--duration-short) ease;
+  transition: text-decoration var(--duration-short) ease, -webkit-text-decoration var(--duration-short) ease;
+}
+
+.row {
   display: flex;
   flex-wrap: wrap;
 }
-.v-center{
+
+.v-center {
   align-items: center;
 }
-ul{
+
+ul {
   list-style: none;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
-a{
+
+a {
   text-decoration: none;
 }
+
 /* header */
-.header{
+.header {
   display: block;
   width: 100%;
   position: relative;
   z-index: 99;
-  padding:15px;
+  padding: 15px;
 }
-.header .item-left{
-  flex:0 0 17%;
+
+.header .item-left {
+  flex: 0 0 17%;
 }
-.header .logo a{
+
+.header .logo a {
   font-size: 30px;
-  color:#000000;
+  color: #000000;
   font-weight: 700;
   text-decoration: none;
 }
-.header .item-center{
-  flex:0 0 66%;
+
+.header .item-center {
+  flex: 0 0 66%;
 }
-.header .item-right{
-  flex:0 0 17%;
+
+.header .item-right {
+  flex: 0 0 17%;
   display: flex;
   justify-content: flex-end;
 }
-.header .item-right a{
+
+.header .item-right a {
   text-decoration: none;
   font-size: 16px;
-  color:#555555;
+  color: #424551;
   display: inline-block;
   margin-left: 10px;
   transition: color 0.3s ease;
 }
-.header .menu > ul > li{
+
+.header .menu > ul > li {
   display: inline-block;
   line-height: 50px;
   margin-left: 25px;
 }
-.header .menu > ul > li > a{
-  font-size: 15px;
-  font-weight: 500;
-  color:#000000 !important;
+
+.header .menu > ul > li > a {
+  font-size: 16px;
+  font-weight: 700;
+  color: #424551;
   position: relative;
   text-transform: capitalize;
   transition: color 0.3s ease;
 }
-.header .menu > ul > li .sub-menu{
+
+.header .menu > ul > li .sub-menu {
   position: absolute;
   z-index: 500;
-  background-color:#ffffff;
-  box-shadow: -2px 8px 70px -25px rgba(0,0,0,0.3);
+  background-color: #ffffff;
+  box-shadow: -2px 8px 70px -25px rgba(0, 0, 0, 0.3);
   padding: 20px 30px;
   transition: all 0.5s ease;
-  margin-top:25px;
-  opacity:0;
+  margin-top: 25px;
+  opacity: 0;
   visibility: hidden;
 }
-@media(min-width: 992px){
-  .header .menu > ul > li.menu-item-has-children:hover .sub-menu{
+
+@media (min-width: 992px) {
+  .header .menu > ul > li.menu-item-has-children:hover .sub-menu {
     margin-top: 0;
     visibility: visible;
     opacity: 1;
   }
 }
-.header .menu > ul > li .sub-menu > ul > li{
+.header .menu > ul > li .sub-menu > ul > li {
   line-height: 1;
 }
-.header .menu > ul > li .sub-menu > ul > li > a{
+
+.header .menu > ul > li .sub-menu > ul > li > a {
   display: inline-block;
   padding: 10px 0;
-  font-size: 15px;
+  font-size: 16px;
   color: #555555;
   transition: color 0.3s ease;
   text-decoration: none;
   text-transform: capitalize;
 }
-.header .menu > ul > li .single-column-menu{
+
+.header .menu > ul > li .single-column-menu {
   min-width: 280px;
   max-width: 350px;
 }
-.header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li{
+
+.header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li {
   line-height: 1;
   display: block;
 }
+
 .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a {
-  padding:10px 0;
+  padding: 10px 0;
   display: inline-block;
   font-size: 15px;
-  color:#555555;
+  color: #555555;
   transition: color 0.3s ease;
 }
-.header .menu > ul > li .sub-menu.mega-menu{
+
+.header .menu > ul > li .sub-menu.mega-menu {
   left: 50%;
   transform: translateX(-50%);
 }
 
-.header .menu > ul > li .sub-menu.mega-menu-column-4{
-  max-width: 1100px;
+.header .menu > ul > li .sub-menu.mega-menu-column-4 {
+  max-width: 1380px;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding:8px 0px;
+  padding: 8px 0px;
 }
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item{
-  flex:0 0 25%;
-  padding:0 15px;
+
+.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item {
+  flex: 0 0 25%;
+  padding: 0 15px;
 }
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item .title{
+
+.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item .title {
   font-size: 16px;
-  color:#ea4636;
+  color: #ea4636;
   font-weight: 500;
   line-height: 1;
-  padding:10px 0;
+  padding: 10px 0;
 }
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title{
+
+.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title {
   text-align: center;
 }
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img{
+
+.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img {
   max-width: 100%;
   width: 100%;
   vertical-align: middle;
   margin-top: 10px;
 }
+
 .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a:hover,
 .header .menu > ul > li .sub-menu > ul > li > a:hover,
 .header .item-right a:hover,
-.header .menu > ul > li:hover > a{
-  color:#ea4636;
+.header .menu > ul > li:hover > a {
+  color: #17696a;
 }
-/* banner section */
-.banner-section{
-  background-image: url('../img/banner.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 700px;
-  width: 100%;
-  display: block;
+
+.header .menu > ul > li:last-child > a {
+  color: #ff4242;
 }
+
 .mobile-menu-head,
-.mobile-menu-trigger{
+.mobile-menu-trigger {
   display: none;
 }
 
 /*responsive*/
-@media(max-width: 991px){
+@media (max-width: 991px) {
+  .header .item-center {
+    order: 3;
+    flex: 0 0 100%;
+  }
 
-  .header .item-center{
-    order:3;
-    flex:0 0 100%;
-  }
   .header .item-left,
-  .header .item-right{
-    flex:0 0 auto;
+.header .item-right {
+    flex: 0 0 auto;
   }
-  .v-center{
+
+  .v-center {
     justify-content: space-between;
   }
-  .header .mobile-menu-trigger{
+
+  .header .mobile-menu-trigger {
     display: flex;
     height: 30px;
     width: 30px;
@@ -321,125 +359,142 @@ a{
     align-items: center;
     justify-content: center;
   }
-  .header .mobile-menu-trigger span{
+
+  .header .mobile-menu-trigger span {
     display: block;
     height: 2px;
     background-color: #333333;
     width: 24px;
     position: relative;
   }
+
   .header .mobile-menu-trigger span:before,
-  .header .mobile-menu-trigger span:after{
-    content: '';
+.header .mobile-menu-trigger span:after {
+    content: "";
     position: absolute;
-    left:0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: #333333;
   }
-  .header .mobile-menu-trigger span:before{
-    top:-6px;
+
+  .header .mobile-menu-trigger span:before {
+    top: -6px;
   }
-  .header .mobile-menu-trigger span:after{
-    top:6px;
+
+  .header .mobile-menu-trigger span:after {
+    top: 6px;
   }
-  .header .item-right{
+
+  .header .item-right {
     align-items: center;
   }
 
-  .header .menu{
+  .header .menu {
     position: fixed;
     width: 320px;
-    background-color:#ffffff;
-    left:0;
-    top:0;
+    background-color: #ffffff;
+    left: 0;
+    top: 0;
     height: 100%;
     overflow: hidden;
     transform: translate(-100%);
     transition: all 0.5s ease;
     z-index: 1099;
   }
-  .header .menu.active{
+
+  .header .menu.active {
     transform: translate(0%);
   }
-  .header .menu > ul > li{
+
+  .header .menu > ul > li {
     line-height: 1;
-    margin:0;
+    margin: 0;
     display: block;
   }
-  .header .menu > ul > li > a{
+
+  .header .menu > ul > li > a {
     line-height: 50px;
     height: 50px;
-    padding:0 50px 0 15px;
+    padding: 0 50px 0 15px;
     display: block;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
-  .header .menu > ul > li > a i{
+
+  .header .menu > ul > li > a i {
     position: absolute;
     height: 50px;
     width: 50px;
-    top:0;
+    top: 0;
     right: 0;
     text-align: center;
     line-height: 50px;
     transform: rotate(-90deg);
   }
-  .header .menu .mobile-menu-head{
+
+  .header .menu .mobile-menu-head {
     display: flex;
     height: 50px;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     justify-content: space-between;
     align-items: center;
     position: relative;
     z-index: 501;
+    position: -webkit-sticky;
     position: sticky;
     background-color: #ffffff;
-    top:0;
+    top: 0;
   }
-  .header .menu .mobile-menu-head .go-back{
+
+  .header .menu .mobile-menu-head .go-back {
     height: 50px;
     width: 50px;
-    border-right: 1px solid rgba(0,0,0,0.1);
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
     line-height: 50px;
     text-align: center;
-    color:#000000;
+    color: #000000;
     font-size: 16px;
     display: none;
   }
-  .header .menu .mobile-menu-head.active .go-back{
+
+  .header .menu .mobile-menu-head.active .go-back {
     display: block;
   }
-  .header .menu .mobile-menu-head .current-menu-title{
+
+  .header .menu .mobile-menu-head .current-menu-title {
     font-size: 15px;
     font-weight: 500;
-    color:#000000;
+    color: #000000;
   }
-  .header .menu .mobile-menu-head .mobile-menu-close{
+
+  .header .menu .mobile-menu-head .mobile-menu-close {
     height: 50px;
     width: 50px;
-    border-left: 1px solid rgba(0,0,0,0.1);
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
     line-height: 50px;
     text-align: center;
-    color:#000000;
+    color: #000000;
     font-size: 25px;
   }
-  .header .menu .menu-main{
+
+  .header .menu .menu-main {
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
   }
+
   .header .menu > ul > li .sub-menu.mega-menu,
-  .header .menu > ul > li .sub-menu{
+.header .menu > ul > li .sub-menu {
     visibility: visible;
     opacity: 1;
     position: absolute;
     box-shadow: none;
-    margin:0;
-    padding:15px;
-    top:0;
-    left:0;
+    margin: 0;
+    padding: 15px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     padding-top: 65px;
@@ -449,64 +504,94 @@ a{
     transform: translateX(0%);
     overflow-y: auto;
   }
-  .header .menu > ul > li .sub-menu.active{
+
+  .header .menu > ul > li .sub-menu.active {
     display: block;
   }
-  @keyframes slideLeft{
-    0%{
-      opacity:0;
+
+  @-webkit-keyframes slideLeft {
+    0% {
+      opacity: 0;
       transform: translateX(100%);
     }
-    100%{
-      opacity:1;
+    100% {
+      opacity: 1;
       transform: translateX(0%);
     }
   }
-  @keyframes slideRight{
-    0%{
-      opacity:1;
+
+  @keyframes slideLeft {
+    0% {
+      opacity: 0;
+      transform: translateX(100%);
+    }
+    100% {
+      opacity: 1;
       transform: translateX(0%);
     }
-    100%{
-      opacity:0;
+  }
+  @-webkit-keyframes slideRight {
+    0% {
+      opacity: 1;
+      transform: translateX(0%);
+    }
+    100% {
+      opacity: 0;
       transform: translateX(100%);
     }
   }
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img{
-    margin-top:0;
+  @keyframes slideRight {
+    0% {
+      opacity: 1;
+      transform: translateX(0%);
+    }
+    100% {
+      opacity: 0;
+      transform: translateX(100%);
+    }
   }
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title{
+  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img {
+    margin-top: 0;
+  }
+
+  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title {
     margin-bottom: 20px;
   }
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center:last-child .title{
-    margin-bottom:0px;
+
+  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center:last-child .title {
+    margin-bottom: 0px;
   }
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item{
+
+  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item {
     flex: 0 0 100%;
     padding: 0px;
   }
+
   .header .menu > ul > li .sub-menu > ul > li > a,
-  .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a{
+.header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a {
     display: block;
   }
+
   .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul {
     margin-bottom: 15px;
   }
-  .menu-overlay{
+
+  .menu-overlay {
     position: fixed;
-    background-color: rgba(0,0,0,0.5);
-    left:0;
-    top:0;
+    background-color: rgba(0, 0, 0, 0.5);
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     z-index: 1098;
     visibility: hidden;
-    opacity:0;
+    opacity: 0;
     transition: all 0.5s ease;
   }
-  .menu-overlay.active{
+
+  .menu-overlay.active {
     visibility: visible;
-    opacity:1;
+    opacity: 1;
   }
 }
 .desktop-oddColumnContent {
@@ -516,6 +601,7 @@ a{
   height: 436px;
   padding-top: 4px;
 }
+
 .desktop-navBlock {
   display: block;
   position: relative;
@@ -524,49 +610,59 @@ a{
   margin: 0;
   padding: 0;
 }
-.desktop-navBlock>li {
+
+.desktop-navBlock > li {
   padding-left: 25px;
 }
+
 .desktop-categoryName {
   display: block;
   font-size: 14px;
   text-decoration: none;
 }
+
 .desktop-categoryName {
-  text-transform: capitalize;
-  color: #3e4152;
+  text-transform: uppercase;
+  color: #1e212c;
   padding: 12px 0 2px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  line-height: 25px;
-  font-weight: 500;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
 }
+
 .desktop-categoryLink {
-  color: #282c3f;
-  line-height: 23px!important;
+  color: #424551;
   font-weight: 400;
 }
+
 .desktop-categoryLink, .desktop-categoryName {
   display: block;
   font-size: 14px;
   text-decoration: none;
 }
+
 .desktop-evenColumnContent {
-  background-color: rgba(245,245,246,.4);
+  background-color: rgba(245, 245, 246, 0.4);
 }
+
 .desktop-hrLine {
   width: 140px;
   height: 1px;
   margin: 12px 0 0 25px;
   background-color: #eaeaec;
 }
+
 a.desktop-categoryLink:hover {
-  font-weight: 700;
+  color: #ff4242;
 }
+
 li.menu-item-has-children:hover {
-  border-bottom: 4px solid;
+  color: #17696a;
 }
+
 .mega-menu {
   margin-top: 5px !important;
 }
